[gd_scene load_steps=25 format=3 uid="uid://b66jvbecg4tog"]

[ext_resource type="Script" path="res://objects/door.gd" id="1_hja7c"]
[ext_resource type="Texture2D" uid="uid://cm3geieecstfd" path="res://art/Esher/doors.png" id="2_2b7l1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qst01"]
size = Vector2(16, 204)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcg4p"]
atlas = ExtResource("2_2b7l1")
region = Rect2(15, 0, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipjrr"]
atlas = ExtResource("2_2b7l1")
region = Rect2(345, 0, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo14c"]
atlas = ExtResource("2_2b7l1")
region = Rect2(180, 0, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjda7"]
atlas = ExtResource("2_2b7l1")
region = Rect2(510, 0, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn6ek"]
atlas = ExtResource("2_2b7l1")
region = Rect2(15, 918, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6j26"]
atlas = ExtResource("2_2b7l1")
region = Rect2(345, 918, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_8flet"]
atlas = ExtResource("2_2b7l1")
region = Rect2(180, 918, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_j25f5"]
atlas = ExtResource("2_2b7l1")
region = Rect2(510, 918, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqxll"]
atlas = ExtResource("2_2b7l1")
region = Rect2(15, 306, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqh7l"]
atlas = ExtResource("2_2b7l1")
region = Rect2(345, 306, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_j872d"]
atlas = ExtResource("2_2b7l1")
region = Rect2(180, 306, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ihou"]
atlas = ExtResource("2_2b7l1")
region = Rect2(510, 306, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_celwc"]
atlas = ExtResource("2_2b7l1")
region = Rect2(15, 612, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_or5xx"]
atlas = ExtResource("2_2b7l1")
region = Rect2(345, 612, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_bghxl"]
atlas = ExtResource("2_2b7l1")
region = Rect2(180, 612, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s50l"]
atlas = ExtResource("2_2b7l1")
region = Rect2(510, 612, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_64rw1"]
atlas = ExtResource("2_2b7l1")
region = Rect2(15, 1530, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgrbw"]
atlas = ExtResource("2_2b7l1")
region = Rect2(345, 1530, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_b53mc"]
atlas = ExtResource("2_2b7l1")
region = Rect2(180, 1530, 165, 306)

[sub_resource type="AtlasTexture" id="AtlasTexture_xafnw"]
atlas = ExtResource("2_2b7l1")
region = Rect2(510, 1530, 165, 306)

[sub_resource type="SpriteFrames" id="SpriteFrames_iga4d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcg4p")
}],
"loop": true,
"name": &"black_door_closed_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipjrr")
}],
"loop": true,
"name": &"black_door_closed_right",
"speed": 5.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_uo14c")
}],
"loop": true,
"name": &"black_door_open_left",
"speed": 5.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_xjda7")
}],
"loop": true,
"name": &"black_door_open_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn6ek")
}],
"loop": true,
"name": &"blue_door_closed_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6j26")
}],
"loop": true,
"name": &"blue_door_closed_right",
"speed": 5.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_8flet")
}],
"loop": true,
"name": &"blue_door_open_left",
"speed": 5.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_j25f5")
}],
"loop": true,
"name": &"blue_door_open_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqxll")
}],
"loop": true,
"name": &"orange_door_closed_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqh7l")
}],
"loop": true,
"name": &"orange_door_closed_right",
"speed": 5.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_j872d")
}],
"loop": true,
"name": &"orange_door_open_left",
"speed": 5.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_7ihou")
}],
"loop": true,
"name": &"orange_door_open_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_celwc")
}],
"loop": true,
"name": &"red_door_closed_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_or5xx")
}],
"loop": true,
"name": &"red_door_closed_right",
"speed": 5.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_bghxl")
}],
"loop": true,
"name": &"red_door_open_left",
"speed": 5.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_3s50l")
}],
"loop": true,
"name": &"red_door_open_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64rw1")
}],
"loop": true,
"name": &"white_door_closed_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgrbw")
}],
"loop": true,
"name": &"white_door_closed_right",
"speed": 5.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_b53mc")
}],
"loop": true,
"name": &"white_door_open_left",
"speed": 5.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_xafnw")
}],
"loop": true,
"name": &"white_door_open_right",
"speed": 5.0
}]

[node name="Door" type="Area2D" groups=["door"]]
script = ExtResource("1_hja7c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -23)
shape = SubResource("RectangleShape2D_qst01")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_iga4d")
animation = &"black_door_closed_left"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
